heatmaply 1.0.0 (2019-07-17)
===============

## BUGFIXES
* heatmaply
  - Legends are no longer shown for the row/column dendrogram traces when
    plot_method = "ggplot".
  - cellnote would be placed outwith the heatmap when plot_method = "ggplot"
  - showticklabels applies when row_dend_left=TRUE and plot_method="plotly"

###OTHER NOTES
- Started using pkgdown :)

heatmaply 0.16.0 (2019-05-10)
===============

## NEW FEATURES
* heatmaply
  - The boolean argument dend_hoverinfo can control whether hoverinfo is shown
    for the row and column dendrograms.
## BUGFIXES
* heatmaply
  - Supplying label_names could cause incorrect orientation of side colors
  - Using plot_method="plotly" could cause incorrect interpretation of colour
    strings.
  - custom_hovertext did not work when plot_method="plotly"
  - Remove collaborate option internally (would cause warnings to be issued)
## NOTES
* heatmaply
  - Use `plotly::orca` for saving to file, rather than `plotly::export`
* Alan O'Callaghan is now recognized in the DESCRIPTION as a co-author of the package, in recognition to his significant (continuous) contribution to the package and the community. Thanks for everything Alan!

heatmaply 0.15.2 (2018-07-06)
===============

## BUGFIXES
* heatmaply
  - labels did not show (only numbers)


heatmaply 0.15.0 (2018-06-23)
===============

## NEW FEATURES
* heatmaply
  - Side colour plot legends will now have the title of the column when there is only one column used.
## BUGFIXES
* heatmaply
  - heatmaply would scramble rownames when manually supplied via labrow or labcol
  - Minor bugfixes relating to the use of the `node_size_mat` argument.
  - handle cases with row/col names are not all unique. fix #155
  - resolve some test errors.


heatmaply 0.14.1 (2018-02-01)
================

### BUGFIXES
* heatmaply
  - hover text didn't show sometimes.
  - If `custom_hovertext` is not a matrix - it is turned into a matrix (important if inserting a data.frame). Fix issue #151


